tests/files/parser_tests/should_fail/113.cmdr
//Should not parse due to mismatching curly braces
{{{{{}}}}